include/zynum/blas/blas.h

typedef int32_t zynum_blas_int;
typedef struct {
    float real;
    float imag;
} zynum_blas_complex_float;
typedef struct {
    double real;
    double imag;
} zynum_blas_complex_double;
void zsyrk_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const zynum_blas_complex_double *beta, zynum_blas_complex_double *c, const zynum_blas_int *ldc);
void cherk_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const float *beta, zynum_blas_complex_float *c, const zynum_blas_int *ldc);
void zherk_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const double *beta, zynum_blas_complex_double *c, const zynum_blas_int *ldc);
void ssyr2k_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const float *alpha, const float *a, const zynum_blas_int *lda, const float *b, const zynum_blas_int *ldb, const float *beta, float *c, const zynum_blas_int *ldc);
void dsyr2k_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const double *alpha, const double *a, const zynum_blas_int *lda, const double *b, const zynum_blas_int *ldb, const double *beta, double *c, const zynum_blas_int *ldc);
void csyr2k_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const zynum_blas_complex_float *b, const zynum_blas_int *ldb, const zynum_blas_complex_float *beta, zynum_blas_complex_float *c, const zynum_blas_int *ldc);
void zsyr2k_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const zynum_blas_complex_double *b, const zynum_blas_int *ldb, const zynum_blas_complex_double *beta, zynum_blas_complex_double *c, const zynum_blas_int *ldc);
void cher2k_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const zynum_blas_complex_float *b, const zynum_blas_int *ldb, const float *beta, zynum_blas_complex_float *c, const zynum_blas_int *ldc);
void zher2k_(const char *u, const char *t, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const zynum_blas_complex_double *b, const zynum_blas_int *ldb, const double *beta, zynum_blas_complex_double *c, const zynum_blas_int *ldc);
void strmm_(const char *side, const char *u, const char *t, const char *d, const zynum_blas_int *m, const zynum_blas_int *n, const float *alpha, const float *a, const zynum_blas_int *lda, float *b, const zynum_blas_int *ldb);
void dtrmm_(const char *side, const char *u, const char *t, const char *d, const zynum_blas_int *m, const zynum_blas_int *n, const double *alpha, const double *a, const zynum_blas_int *lda, double *b, const zynum_blas_int *ldb);
void ctrmm_(const char *side, const char *u, const char *t, const char *d, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, zynum_blas_complex_float *b, const zynum_blas_int *ldb);
void ztrmm_(const char *side, const char *u, const char *t, const char *d, const zynum_blas_int *m, const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, zynum_blas_complex_double *b, const zynum_blas_int *ldb);
void strsm_(const char *side, const char *u, const char *t, const char *d, const zynum_blas_int *m, const zynum_blas_int *n, const float *alpha, const float *a, const zynum_blas_int *lda, float *b, const zynum_blas_int *ldb);
void dtrsm_(const char *side, const char *u, const char *t, const char *d, const zynum_blas_int *m, const zynum_blas_int *n, const double *alpha, const double *a, const zynum_blas_int *lda, double *b, const zynum_blas_int *ldb);