include/zynum/blas/blas.f90


    subroutine zsyrk( &
        u, t, n, k, alpha, a, &
        lda, beta, c, ldc &
    ) bind(C, name="zsyrk_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine zsyrk

    subroutine cherk( &
        u, t, n, k, alpha, a, &
        lda, beta, c, ldc &
    ) bind(C, name="cherk_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine cherk

    subroutine zherk( &
        u, t, n, k, alpha, a, &
        lda, beta, c, ldc &
    ) bind(C, name="zherk_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine zherk

    subroutine ssyr2k( &
        u, t, n, k, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="ssyr2k_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      real(c_float), intent(in) :: beta
      real(c_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine ssyr2k

    subroutine dsyr2k( &
        u, t, n, k, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="dsyr2k_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      real(c_double), intent(in) :: beta
      real(c_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine dsyr2k

    subroutine csyr2k( &
        u, t, n, k, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="csyr2k_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine csyr2k

    subroutine zsyr2k( &
        u, t, n, k, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="zsyr2k_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine zsyr2k

    subroutine cher2k( &
        u, t, n, k, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="cher2k_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      real(c_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine cher2k

    subroutine zher2k( &
        u, t, n, k, alpha, a, &
        lda, b, ldb, beta, c, ldc &
    ) bind(C, name="zher2k_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(in) :: b(*)
      integer(blasint), intent(in) :: ldb
      real(c_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: c(*)
      integer(blasint), intent(in) :: ldc
    end subroutine zher2k

    subroutine strmm( &
        side, u, t, d, m, n, &
        alpha, a, lda, b, ldb &
    ) bind(C, name="strmm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(inout) :: b(*)
      integer(blasint), intent(in) :: ldb
    end subroutine strmm

    subroutine dtrmm( &
        side, u, t, d, m, n, &
        alpha, a, lda, b, ldb &
    ) bind(C, name="dtrmm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(inout) :: b(*)
      integer(blasint), intent(in) :: ldb
    end subroutine dtrmm

    subroutine ctrmm( &
        side, u, t, d, m, n, &
        alpha, a, lda, b, ldb &
    ) bind(C, name="ctrmm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(inout) :: b(*)
      integer(blasint), intent(in) :: ldb
    end subroutine ctrmm

    subroutine ztrmm( &
        side, u, t, d, m, n, &
        alpha, a, lda, b, ldb &
    ) bind(C, name="ztrmm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(inout) :: b(*)
      integer(blasint), intent(in) :: ldb
    end subroutine ztrmm

    subroutine strsm( &
        side, u, t, d, m, n, &
        alpha, a, lda, b, ldb &
    ) bind(C, name="strsm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(inout) :: b(*)
      integer(blasint), intent(in) :: ldb
    end subroutine strsm

    subroutine dtrsm( &
        side, u, t, d, m, n, &
        alpha, a, lda, b, ldb &
    ) bind(C, name="dtrsm_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: side
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: m
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(inout) :: b(*)
      integer(blasint), intent(in) :: ldb
    end subroutine dtrsm
